--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Aaron Brager
-author:
-  name: Aaron Brager
-  email: aaron@aaronbrager.com
+author: Aaron Brager
+email: aaron@aaronbrager.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Aaron Brager
+  Copyright © 2020–2022, Aaron Brager
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://aaronbrager.com" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -31,11 +30,9 @@ url: "https://aaronbrager.com" # the base hostname & protocol for your site, e.g
 theme: minima
 # plugins:
 #   - jekyll-feed
-minima:
-  social_links:
-    twitter: getaaron
-    github: getaaron
-    stackoverflow: "1445366"
+twitter_username: getaaron
+github_username: getaaron
+stackoverflow_username: "1445366"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
