--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Aaron Brager
+title: AGB Consulting Group
 author: Aaron Brager
 email: aaron@aaronbrager.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Copyright © 2020–2022, Aaron Brager
+  Copyright © 2020–2023, AGB Consulting Group Inc
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://aaronbrager.com" # the base hostname & protocol for your site, e.g. http://example.com
 
